@@ -1,3 +1,8 @@
+2007-04-26  Jean-Louis Martineau <martineau@zmanda.com>
+	* server-src/amflush.c: Quote L_DISK and FLUSH line.
+	* server-src/driver.c: Parse quoted FLUSH line.
+	* server-src/planner.c:  Quote L_DISK and FLUSH line.
+
 2007-04-25  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amindexd.c: safe_fd(dbfd(), 1)
 
